# maxim-wellness

./: Release Notes.txt  build.gradle  settings.gradle
algorithm_hrv/: CMakeLists.txt  build.gradle
algorithm_hrv/libs/hrv/include/: hrv_metric_calculator.h  ibi_container.h  ibi_preprocessor.h  lombPeriodogram.h  mxm_hrv.h
algorithm_hrv/src/main/: AndroidManifest.xml
algorithm_hrv/src/main/cpp/: HrvAlgorithm.cpp
algorithm_respiratory_rate/: CMakeLists.txt  build.gradle
algorithm_respiratory_rate/libs/respiratory_rate/include/: mxm_respiration_rate_manager.h
algorithm_respiratory_rate/src/androidTest/java/com/maximintegrated/algorithm_respiratory_rate/: ExampleInstrumentedTest.java
algorithm_respiratory_rate/src/main/: AndroidManifest.xml
algorithm_respiratory_rate/src/main/cpp/: RespiratoryRateAlgorithm.cpp
algorithm_respiratory_rate/src/main/java/com/maximintegrated/algorithm_respiratory_rate/: RespiratoryRateAlgorithm.java  RespiratoryRateAlgorithmInitConfig.java  RespiratoryRateAlgorithmInput.java  RespiratoryRateAlgorithmOutput.java
algorithm_respiratory_rate/src/test/java/com/maximintegrated/algorithm_respiratory_rate/: ExampleUnitTest.java
algorithm_sleep_qa/: CMakeLists.txt  build.gradle
algorithm_sleep_qa/libs/sleep_qa/include/: mxm_sqa_process.h
algorithm_sleep_qa/src/main/: AndroidManifest.xml
algorithm_sleep_qa/src/main/cpp/: SleepQaAlgorithm.cpp
algorithm_sleep_qa/src/main/res/values/: strings.xml
algorithm_stress/: CMakeLists.txt  build.gradle
algorithm_stress/libs/stress/include/: mxm_stress_monitoring.h
algorithm_stress/src/androidTest/java/com/maximintegrated/algorithm_stress/: ExampleInstrumentedTest.java
algorithm_stress/src/main/: AndroidManifest.xml
algorithm_stress/src/main/cpp/: StressAlgorithm.cpp
algorithm_stress/src/main/java/com/maximintegrated/algorithm_stress/: StressAlgorithm.java  StressAlgorithmInput.java  StressAlgorithmOutput.java
algorithm_stress/src/test/java/com/maximintegrated/algorithm_stress/: ExampleUnitTest.java
algorithms/: CMakeLists.txt  build.gradle
algorithms/libs/algorithms/include/: AlgoWrapper.h  AlgoWrapperInternal.h  SSauthentication.h  mxm_hrv_public.h  mxm_respiration_rate_manager.h  mxm_sports_coaching_public.h
algorithms/src/main/cpp/: AlgoWrapper.cpp  MaximAlgorithms.cpp  SSauthentication.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: gradient_pb.xml  ic_archive.xml  ic_sports_coaching.xml  rectangle.xml
app/src/main/res/layout/: activity_main.xml  archive_file_item.xml  bpt_history_item.xml  connection.xml  dialog_help.xml  dialog_whrm_settings.xml  fragment_alignment.xml  fragment_archive.xml  fragment_bpt_calibration.xml  fragment_bpt_calibration_warning.xml  fragment_hrv.xml  fragment_log_parser.xml  fragment_offline_data.xml  fragment_respiratory.xml  fragment_spo2.xml  fragment_sports_coaching_epoc_recovery.xml  fragment_sports_coaching_fitness_age.xml  fragment_sports_coaching_landing.xml  fragment_sports_coaching_readiness.xml  fragment_sports_coaching_recovery_time.xml  fragment_sports_coaching_training.xml  fragment_sports_coaching_vo2max.xml  fragment_stress.xml  fragment_whrm.xml  include_app_bar.xml  include_bpt_calibration_fragment_content.xml  include_bpt_calibration_warning_fragment_content.xml  include_bpt_main_fragment_content.xml  include_bpt_measurement_fragment_content.xml  include_ecg_fragment_content.xml  include_hrv_fragment_content.xml  include_main_fragment_content.xml  include_respiratory_fragment_content.xml  include_spo2_fragment_content.xml  include_stress_fragment_content.xml  include_temp_fragment_content.xml  include_whrm_fragment_content.xml  login_layout.xml  profile_layout.xml  view_ble_connection.xml  (+9 more)
app/src/main/res/menu/: bpt_menu.xml  toolbar_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
bluetooth/src/main/res/layout/: activity_bluetooth_scanner.xml
bluetooth/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hsp/src/main/: AndroidManifest.xml
polar/: build.gradle
polar/src/main/: AndroidManifest.xml
(+139 files in other folders)
